# Automatch

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/data/: Caja_velocidades_freq_map.pkl  Marca_freq_map.pkl  aggregated_users_cars.csv  coches_disponibles_22feb.csv  comunidad_autonoma_freq_map.pkl  condiciones_conduccion_freq_map.pkl  modelo_output.csv  modelo_output_v2.csv  modelo_users_cars.csv  modelo_users_cars.pkl  modelo_users_cars_v2.pkl  resultados.csv  sector_freq_map.pkl  tipo_combustible.1_freq_map.pkl  tipo_combustible_freq_map.pkl  usuarios_pesos.csv
src/serve/: main.py
src/serve/train/: apply_model.ipynb  apply_model.py  modelos_users_cars.ipynb  modelos_users_cars_v2.ipynb
test/notebooks/: Clickcars_Webscrapping.ipynb  Modelos_v5.ipynb  apply_model.ipynb  modelos_users_cars.ipynb  modelos_users_cars_v2.ipynb  users_cars_dataprep.ipynb  users_create_data.ipynb  vacaciones_freq_map.pkl
