[project]
name = "automatch"
version = "0.1.0"
description = ""
authors = [
    {name = "VIM903",email = "swatchvim@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "kmodes (>=0.12.2,<0.13.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "selenium (>=4.29.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi (>=0.115.9,<0.116.0)",
    "jinja2 (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
